# APM-Apex-Package-Manager

./: .gitignore  CMakeLists.txt  README.md  install_clean.sh  stubs.c
completions/: apex.bash  apex.zsh
src/core/: version.c
src/db/: db.c
src/solver/: solver.c
src/ui/: main.cpp
src/util/: util.c
tests/: test_version.c
